adding stripe api

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.734.0",
+    "jest": "^26.4.0",
     "serverless-bundle": "2.0.0",
     "serverless-dotenv-plugin": "^2.4.2",
     "serverless-offline": "^5.12.1"
   },
   "dependencies": {
+    "stripe": "^8.86.0",
     "uuid": "^7.0.3"
   }
 }
